name:                stackage-common
version:             0.0.0
synopsis:            Common stackage functionality
description:         Common stackage functionality
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@fpcomplete.com
copyright:           2015 FP Complete
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   Stackage.BuildPlan
                     Stackage.BuildPlan.Types
                     Stackage.Config
                     Stackage.Constants
                     Stackage.Docker
                     Stackage.Docker.GlobalDB
                     Stackage.Fetch
                     Stackage.FlagName
                     Stackage.GhcPkg
                     Stackage.GhcPkgId
                     Stackage.Package
                     Stackage.PackageIdentifier
                     Stackage.PackageIndex.Read
                     Stackage.PackageIndex.Update
                     Stackage.PackageName
                     Stackage.Version
                     Stackage.Path
                     Stackage.Types
                     Stackage.Build
                     Stackage.Build.Types
                     Stackage.Build.Defaults
                     Stackage.Build.Doc
                     Stackage.Build.Config
  other-modules:     Stackage.Process
                     Path.Find
                     System.Process.PagerEditor
                     Paths_stackage_common
  build-depends:     Cabal >= 1.18.1.5
                   , aeson >= 0.8.0.2
                   , async >= 2.0.2
                   , attoparsec >= 0.12.1.5
                   , base >= 4 && <5
                   , bytestring
                   , conduit >= 1.2.4
                   , conduit >= 1.2.4
                   , conduit-combinators >= 0.3.0.6
                   , conduit-extra >= 1.1.7.1
                   , containers >= 0.5.5.1
                   , cryptohash >= 0.11.6
                   , data-default >= 0.5.3
                   , directory >= 1.2.1.0
                   , enclosed-exceptions
                   , exceptions >= 0.8.0.2
                   , filepath >= 1.3.0.2
                   , hashable >= 1.2.3.2
                   , http-client >= 0.4.9
                   , http-client-tls >= 0.2.2
                   , http-conduit
                   , http-types >= 0.8.6
                   , monad-control
                   , monad-logger >= 0.3.13.1
                   , monad-loops >= 0.4.2.1
                   , mtl >= 2.1.3.1
                   , path >= 0.2.0
                   , persistent >= 2.1.2
                   , persistent-sqlite >= 2.1.4
                   , persistent-template >= 2.1.1
                   , pretty
                   , process >= 1.2.0.0
                   , resourcet >= 1.1.4.1
                   , safe >= 0.3
                   , shake >= 0.15
                   , stm >= 2.4.4
                   , streaming-commons >= 0.1.10.0
                   , system-fileio >= 0.3.16.2
                   , system-filepath >= 0.4.13.2
                   , tar >= 0.4.1.0
                   , template-haskell
                   , temporary >= 1.2.0.3
                   , text >= 1.2.0.4
                   , time >= 1.4.2
                   , transformers >= 0.3.0.0
                   , unix >= 2.7.0.1
                   , unordered-containers >= 0.2.5.1
                   , vector >= 0.10.12.3
                   , void >= 0.7
                   , yaml >= 0.8.10.1
                   , zlib >= 0.5.4.2
  default-language:    Haskell2010

executable stackage-exec
  hs-source-dirs:      main
  main-is:             Exec.hs
  ghc-options:         -Wall -O2
  build-depends:
                        base >=4.7
                , cryptohash >= 0.11.6
                , data-default >= 0.5.3
                , filepath
                , http-client-tls >= 0.2.2
                , monad-logger
                , process
                , stackage-common
  default-language:    Haskell2010

executable stackage-path
  hs-source-dirs:      main
  main-is:             Path.hs
  ghc-options:         -Wall -O2
  build-depends:
                    base >=4.7
                , data-default >= 0.5.3
                , monad-logger
                , stackage-common
  default-language:    Haskell2010
