name:                stack-release-tool
version:             0.0.0.0
description:         Tool to release new versions of stack
build-type:          Simple
cabal-version:       >=1.10

executable stack-release-tool
  main-is:             main/release-tool.hs
  hs-source-dirs:      src/
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       Cabal
                     , aeson
                     , base
                     , bytestring
                     , case-insensitive
                     , conduit
                     , conduit-combinators
                     , directory
                     , extra
                     , here
                     , http-conduit
                     , http-types
                     , mime-types
                     , process
                     , shake
                     , text
                     , zip-archive
                     , zlib
  default-language:    Haskell2010
