name:                stack-integration-tests
version:             0.0.0
synopsis:            Integration tests
description:         Integration tests
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@fpcomplete.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10
homepage:            https://github.com/commercialhaskell/stack

-- This is only present because cabal won't allow a test suite without a
-- library or executable
executable stack-integration-dummy
  main-is:        Dummy.hs
  build-depends:  base
  default-language:    Haskell2010

test-suite stack-integration-tests
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs

  build-depends:  base >= 4.7 && < 10
                , temporary
                , hspec
                , process
                , filepath
                , directory
                , text
                , unix-compat
                , containers
                , conduit
                , conduit-extra
                , resourcet
                , async
                , transformers
                , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/commercialhaskell/stack
