name:                files
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/files#readme
license:             BSD3
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable files-exe
  hs-source-dirs:      src/../src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , file-embed
  default-language:    Haskell2010
