name:                foo
version:             0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Foo
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable alpha
  hs-source-dirs:      app
  main-is:             Alpha.hs
  build-depends:       base, foo
  default-language:    Haskell2010

executable beta
  hs-source-dirs:      app
  main-is:             Beta.hs
  build-depends:       base, foo
  default-language:    Haskell2010
