name:                new-template
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

flag necessary
  manual: True
  default: False
  description: Won't build without this flag on

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base
  default-language:    Haskell2010
  if flag(necessary)
    cpp-options: -DWORK
