name:                files
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/files#readme
license:             BSD3
author:              Author name here
maintainer:          example@example.com
copyright:           2017-2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

