name:                new-template
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable hello-world
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010
