name:           files
version:        0.1.0.0
build-type:     Simple
cabal-version:  >= 2.0

library sublib
  exposed-modules: B
  hs-source-dirs: src-sublib
  build-depends: base
  default-language: Haskell2010

executable exe
  main-is: Main.hs
  hs-source-dirs: exe
  build-depends: base, sublib
  default-language: Haskell2010
