name:           files
version:        0.1.0.0
build-type:     Simple
cabal-version:  >= 2.0

library
  hs-source-dirs:   src
  exposed-modules:  Lib
  build-depends:    base
  default-language: Haskell2010

library lib
  hs-source-dirs:   src-internal
  exposed-modules:  Internal
  build-depends:    base
  default-language: Haskell2010
