name:           files
version:        0.1.0.0
build-type:     Simple
cabal-version:  >= 2.0

library
  exposed-modules: Src
  hs-source-dirs: src
  build-depends: base
  default-language: Haskell2010

library sublib
  exposed-modules: B
  hs-source-dirs: src-sublib
  build-depends: base
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  build-depends: base, files, sublib
  default-language: Haskell2010
