cabal-version:  3.4

name:           cbits-ordering
version:        0.0.0
build-type:     Simple

library
  exposed-modules:
      Lib
  other-modules:
      Paths_cbits_ordering
  hs-source-dirs:
      src
  include-dirs:
      cbits
  c-sources:
      cbits/the_dependency.c
      cbits/a_dependent.c

  build-depends:
      base >=4.7 && <5
  default-language: GHC2021
