cabal-version:       3.0
name:                files
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

library sub
  visibility:          public
  hs-source-dirs:      src
  exposed-modules:     Sub
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
