cabal-version:       3.8
name:                files
version:             0.1.0.0
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , subproject:{subproject, sub}
  default-language:    Haskell2010
