build-type: Simple
name: uploadtest
version: 0.0.0
category: test
maintainer: uploadtest@example.com
cabal-version: 1.20
synopsis: Upload test
description: Upload test description
license: BSD3
license-file: LICENSE
library
  build-depends: base >= 4.7 && < 5
  exposed-modules: Foo
  default-language: Haskell2010
