name:                copy-compiler-tool-test
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://invalid/
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

flag build-foo
  manual: True
  default: False
  description: Build foo

flag build-bar
  manual: True
  default: False
  description: Build bar

flag build-baz
  manual: True
  default: False
  description: Build baz

executable foo-exe
  main-is:             Foo.hs
  build-depends:       base
  default-language:    Haskell2010
  if !flag(build-foo)
    buildable: False

executable bar-exe
  main-is:             Bar.hs
  build-depends:       base
  default-language:    Haskell2010
  if !flag(build-bar)
    buildable: False

executable baz-exe
  main-is:             Baz.hs
  build-depends:       base
  default-language:    Haskell2010
  if !flag(build-baz)
    buildable: False

source-repository head
  type:     git
  location: https://invalid/
