name:                new-template
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

flag fixIt
  manual: True
  default: False
  description: Make the build work

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  default-language:    Haskell2010
  if flag(fixIt)
    build-depends: base >= 4.7
  else
    build-depends: base < 4.7 && > 4.7
