name:           files
version:        0.1.0.0
build-type:     Simple
cabal-version:  >= 2.0

library
  hs-source-dirs:   src
  exposed-modules:  Lib
  build-depends:    base
  default-language: Haskell2010

test-suite test
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:    base, files
  default-language: Haskell2010
  type:             exitcode-stdio-1.0

benchmark bench
  hs-source-dirs:   bench
  main-is:          Main.hs
  build-depends:    base, files
  default-language: Haskell2010
  type:             exitcode-stdio-1.0

