cabal-version: 2.0
name:          foo
version:       0
build-type:    Simple

library
  hs-source-dirs:      src
  build-depends:       base, some-internal-lib
  default-language:    Haskell2010

library some-internal-lib
  hs-source-dirs:      src-internal
  exposed-modules:     Internal
  build-depends:       base
  default-language:    Haskell2010
