name:                test-detailed-example
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.20

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite test-detailed-example-test
  type:                detailed-0.9
  hs-source-dirs:      test
  test-module:         Spec
  build-depends:       base >= 4.7,
                       Cabal >= 1.20
  default-language:    Haskell2010
