name:                files
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

flag test-flag
  description: Generate a compiler error for test purposes
  default:     False
  manual:      True

executable test-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  if flag(test-flag)
    cpp-options: -DTEST_FLAG
