name:                files
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

flag force-enable
  default: False
  description: foo

executable enabled
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
  default-language:    Haskell2010
  buildable: True

executable disabled
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
  default-language:    Haskell2010
  if flag(force-enable)
    buildable: True
  else
    buildable: False
