cabal-version: 2.2
name: my-project
version: 0.1.0.0
build-type: Simple

library str-sig
  default-language: Haskell2010
  hs-source-dirs:   src/sig
  build-depends:    base
  signatures:       Str

library str-text
  default-language: Haskell2010
  hs-source-dirs:   src/text
  build-depends:    base, text
  exposed-modules:  Str

library
  default-language: Haskell2010
  hs-source-dirs:   src/main
  build-depends:    base, str-sig, str-text
  mixins:           str-sig requires (Str as Str)
  exposed-modules:  MyModule
